<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditDetail"
    android:padding="12dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_kegiatan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_kegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:hint="@string/enter_kegiatan"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/keterangan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_kegiatan" />

    <EditText
        android:id="@+id/et_keterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_keterangan"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waktu :"
        app:layout_constraintTop_toBottomOf="@id/et_keterangan"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_waktu"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <Button
        android:id="@+id/btn_tambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ubah/Tambah"
        app:layout_constraintTop_toBottomOf="@id/et_waktu" />

    <Button
        android:id="@+id/btn_selesai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selesai"
        app:layout_constraintTop_toBottomOf="@id/btn_tambah" />
    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kembali"
        android:onClick="back"
        app:layout_constraintTop_toBottomOf="@id/btn_selesai" />
</androidx.constraintlayout.widget.ConstraintLayout>